--- a/webdocs/index.html
+++ b/webdocs/index.html
@@ -1,1 +1,36 @@
-Hello world!
+<html>
+
+<head>
+    <title>This is the title of the page!</title>
+</head>
+
+<body>
+<h1>This is a heading</h1>
+
+<h2>And this is a smaller header</h2>
+
+<p>This is paragraph text, which I fetched from slipsum.com:</p>
+
+<!-- start slipsum code -->
+
+<p>Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass. </p>
+
+<p>The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee. </p>
+
+<p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.  </p>
+
+<!-- please do not remove this line -->
+
+<div style="display:none;">
+<a href="http://slipsum.com">lorem ipsum</a></div>
+
+<!-- end slipsum code -->
+
+<p>Here's a picture of Samuel L. Jackson</p>
+
+<img src="http://www.1031jackfm.ca/files/Samuel-L-Jackson.jpg"/>
+
+<p>Here's a <a href="http://www.google.com">link to Google</a></p>
+
+</body>
+</html>
