--- a/webdocs/index.html
+++ b/webdocs/index.html
@@ -2,6 +2,8 @@
 
 <head>
     <link rel="stylesheet" href="css/main.css"/>
+    <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
     <title>This is the title of the page!</title>
 </head>
 
@@ -10,10 +12,13 @@
 
 <h2 class="outlined">And this is a smaller header, with an outline</h2>
 
+<input type="text" id="textInput" placeholder="Put your name here"/>
+<input type="button" id="textButton" value="Then click here"/>
+
 
 <p>Here's an outlined picture of Samuel L. Jackson, shifted right a bit</p>
 
-<img id="badAssMotherLover" class="outlined" src="http://www.1031jackfm.ca/files/Samuel-L-Jackson.jpg"/>
+<img id="badAssMotherLover" class="outlined" src="img/Samuel-L-Jackson.jpg"/>
 
 <p>Here's a <a href="http://www.google.com">link to Google</a></p>
 <p>And here's the same link <a id="greenLink" href="http://www.google.com">in green italics</a></p>
