--- a/webdocs/index.html
+++ b/webdocs/index.html
@@ -1,27 +1,31 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="css/reset.css"/>
     <link rel="stylesheet" href="css/main.css"/>
     <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-    <title>This is the title of the page!</title>
+    <title>East Bergholt Tennis Club</title>
 </head>
 
 <body>
-<h1>This is a heading</h1>
 
-<h2 class="outlined">And this is a smaller header, with an outline</h2>
+<div id="mainWrapper">
+    <img id="headerImage" src="img/header.png"/>
 
-<input type="text" id="textInput" placeholder="Put your name here"/>
-<input type="button" id="textButton" value="Then click here"/>
+    <div id="sideBar">
+        <ul>
+            <li>Link 1</li>
+            <li>Link 2</li>
+            <li>Link 3</li>
+        </ul>
+    </div>
 
+    <div id="innerWrapper">
+        <p>Here's where the main text and content will go</p>
+    </div>
 
-<p>Here's an outlined picture of Samuel L. Jackson, shifted right a bit</p>
-
-<img id="badAssMotherLover" class="outlined" src="img/Samuel-L-Jackson.jpg"/>
-
-<p>Here's a <a href="http://www.google.com">link to Google</a></p>
-<p>And here's the same link <a id="greenLink" href="http://www.google.com">in green italics</a></p>
+</div>
 
 </body>
 </html>
