--- a/webdocs/index.html
+++ b/webdocs/index.html
@@ -1,29 +1,21 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="css/reset.css"/>
-    <link rel="stylesheet" href="css/main.css"/>
-    <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <link rel="stylesheet" href="/css/reset.css"/>
+    <link rel="stylesheet" href="/css/main.css"/>
+    <script type="text/javascript" src="/js/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="/js/main.js"></script>
     <title>East Bergholt Tennis Club</title>
 </head>
 
 <body>
 
 <div id="mainWrapper">
-    <img id="headerImage" src="img/header.png"/>
+    <img id="headerImage" src="/img/header.png"/>
 
-    <div id="sideBar">
-        <ul>
-            <li>Link 1</li>
-            <li>Link 2</li>
-            <li>Link 3</li>
-        </ul>
-    </div>
+    <div id="sideBar"></div>
 
-    <div id="innerWrapper">
-        <p>Here's where the main text and content will go</p>
-    </div>
+    <div id="innerWrapper"></div>
 
 </div>
 
