--- a/webdocs/index.html
+++ b/webdocs/index.html
@@ -11,7 +11,9 @@
 <body>
 
 <div id="mainWrapper">
-    <img id="headerImage" src="/img/header.png"/>
+    <div id="headerDiv">
+        <img id="headerImage" src="/img/logo.jpg" />
+    </div>
 
     <div id="sideBar"></div>
 
