Header design tweak

--- a/webdocs/index.html
+++ b/webdocs/index.html
@@ -13,7 +13,7 @@
 <div id="mainWrapper">
     <div id="headerDiv">
         <img id="headerImage" src="/img/logo.jpg" />
-        <h1 id="headerText">East Bergholt Tennis Club Website</h1>
+        <h1 id="headerText">East Bergholt Tennis Club</h1>
     </div>
 
     <div id="sideBar"></div>
