--- a/webdocs/index.html
+++ b/webdocs/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="/css/reset.css"/>
     <link rel="stylesheet" href="/css/main.css"/>
+    <link rel="icon" href="/img/logo.jpg"/>
     <script type="text/javascript" src="/js/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="/js/main.js"></script>
     <title>East Bergholt Tennis Club</title>
