--- a/webdocs/index.html
+++ b/webdocs/index.html
@@ -13,7 +13,8 @@
 
 <div id="mainWrapper">
     <div id="headerDiv">
-        <img id="headerImage" src="/img/logo.jpg" />
+        <img id="headerImageLeft" class="headerImage" src="/img/logo.jpg" />
+        <img id="headerImageRight" class="headerImage" src="/img/logo.jpg" />
         <h1 id="headerText">East Bergholt Tennis Club</h1>
     </div>
 
@@ -23,7 +24,7 @@
 
 </div>
 
-<div id="footer"></div>
+<!--<div id="footer"></div>-->
 
 <!-- created by Jack Jackson -->
 
